Added support for the eXist database and atomicity part of the transaction capabilities